# with-axum-demo

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: env_structure.md  project_structure.md  run_migrator_cli.md
src/: lib.rs
src/configure/: db.rs  mod.rs  server.rs  tracing.rs
src/constant/: mod.rs
src/error/: mod.rs
src/init/: database.rs
src/migration/: m20220101_000001_create_expense_income.rs  m20220101_000002_change_null_to_notnull_expense_description.rs  mod.rs
src/router/: mod.rs
src/server/: mod.rs  state.rs
